# skarnet

./: CMakeLists.txt  Makefile  README.md  package.cmake  project.config  project_ver.cmake
execline/: CMakeLists.txt  package.cmake  project_ver.cmake
s6/: CMakeLists.txt  boz_service.in  package.cmake  project_ver.cmake
s6-dns/: CMakeLists.txt  package.cmake  project_ver.cmake
s6-linux-utils/: CMakeLists.txt  package.cmake  project_ver.cmake
s6-networking/: CMakeLists.txt  package.cmake  project_ver.cmake
s6-portable-utils/: CMakeLists.txt  package.cmake  project_ver.cmake
skalibs/: CMakeLists.txt  SkarnetConfig.cmake.in  package.cmake  project_ver.cmake
